--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Post Title: <%= @post.title %></h1>
-<p>Post Content: <%= @post.content %></p>
+<form action="<%= posts_path %>" method="POST">
+  <label>Post title:</label><br>
+  <input type="text" id="post_title" name="post[title]"><br>
+ 
+  <label>Post description:</label><br>
+  <textarea id="post_description" name="post[description]"></textarea><br>
+ 
+  <input type="submit" value="Submit Post">
+</form>
