--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,7 +4,7 @@
 
   <label>Post description:</label><br>
   <%= text_area_tag :'post[description]' %><br>
- 
+
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-  <%= submit_tag "Submit Post" %
+  <%= submit_tag "Submit Post" %>
 <% end %>
